--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -7,6 +7,7 @@
 	--sec-color: #00bdd3;
 	--bg-color: #f8f8f8;
 	--disabled-color: #b4b4b4;
+	--error-color: #cb3d40;
 
 	--fz-title: 40px;
 	--fz-text: 16px;
